feat: refactor user management and authentication, enhance Dockerfile, and update database schema

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@ httpx
 python-jose[cryptography]
 passlib[bcrypt]
 python-multipart
-pymysql
 python-dotenv
+pydantic[email]
 pydantic-settings
+pymysql
+sqlalchemy
+alembic
